--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://angelillo15.es/resources/img/background.png");
+  background-image: url("https://imgur.com/a/yGlOL3J");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
